# SunCast

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  submit_job.slurm
src/: ProcessDEM.cpp  ProcessDEM.h  SolarCalculator.cpp  SolarCalculator.h  __init__.py  config.py  main.cpp
src/data/: __init__.py  extract_dem_gdalwarp.py  process_dem.py
src/solar/: __init__.py  run_solar_calculation.py  run_solar_parquet.py
src/utils/: __init__.py  inspect_parquet.py
src/viz/: __init__.py  visualize_sunset_map.py
